--- a/index.html
+++ b/index.html
@@ -235,6 +235,63 @@
           </div>
         </div>
       </div>
+      <div class="divider"></div>
+      <div class="w-full relative pr-52">
+        <img
+          src="images/decoration/barcode.svg"
+          alt=""
+          class="decoration right-0 top-0 h-full"
+        />
+        <div class="w-full">
+          <h1 class="section-header mb-16">CLIENT REVIEWS</h1>
+          <div class="row mb-8" data-aos="fade-up">
+            <div class="review mr-4">
+              <h1>BANKERS</h1>
+              <p>
+                “Very down-to-earth, respectable and professional developer. I
+                can recommend him to anyone in need of a discord bot! He
+                provided me with an easy-to-use web interface to change settings
+                of my product.”
+              </p>
+              <h3>June 2020 · Discord Bot</h3>
+            </div>
+            <div class="review ml-4">
+              <h1>YAN CINTRO</h1>
+              <p>
+                “P3ntest helped me build my dream minecraft server. He not only
+                explained everything to me and told me where to start but also
+                got a lot of work done himself. Thanks to him, I could launch
+                less than 3 months after development start. He did an amazing
+                job with the plugins, making them well documented and memory
+                leak free.”
+              </p>
+              <h3>March 2019 · MC Plugin</h3>
+            </div>
+          </div>
+          <div class="row" data-aos="fade-up">
+            <div class="review mr-4">
+              <h1>TEEMOKINGDOM</h1>
+              <p>
+                “The developer always responded almost instantly and keeped
+                tweeking my site until I was happy with it. On the day before
+                the release he stayed up extra late just to finish even though
+                it was not his fault the site wasn’t finished. I can function
+                well in teams. He also had no problem working for a cheating
+                company even though he does not agree with the concept at all.”
+              </p>
+              <h3>June 2020 · Discord Bot</h3>
+            </div>
+            <div class="review ml-4">
+              <h1>TEFER</h1>
+              <p>
+                “Fast, easy to work with and friendly. He finished my stock
+                trading site’s backend within 7 days.”
+              </p>
+              <h3>March 2019 · MC Plugin</h3>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script>
       AOS.init();
