design discord bot section

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
         </div>
         <div class="flex-0">
           <h1 class="section-header mb-16">CONTACT ME</h1>
-          <div data-aos="fade-left">
-            <div class="socials">
+          <div>
+            <div class="socials" data-aos="fade-left">
               <div class="socials-image-body">
                 <div class="socials-image">
                   <img src="images/socials/discord.svg" alt="" />
@@ -199,7 +199,7 @@
                 <span class="hover-mask"></span>
               </div>
             </div>
-            <div class="socials">
+            <div class="socials" data-aos="fade-left">
               <div class="socials-image-body">
                 <div class="socials-image">
                   <img src="images/socials/steam.svg" alt="" />
@@ -210,7 +210,7 @@
                 <span class="hover-mask"></span>
               </div>
             </div>
-            <div class="socials">
+            <div class="socials" data-aos="fade-left">
               <div class="socials-image-body">
                 <div class="socials-image">
                   <img src="images/socials/github.svg" alt="" />
@@ -221,7 +221,7 @@
                 <span class="hover-mask"></span>
               </div>
             </div>
-            <div class="socials">
+            <div class="socials" data-aos="fade-left">
               <div class="socials-image-body">
                 <div class="socials-image">
                   <img src="images/socials/twitter.svg" alt="" />
@@ -241,6 +241,7 @@
           src="images/decoration/barcode.svg"
           alt=""
           class="decoration right-0 top-0 h-full"
+          data-aos="fade-left"
         />
         <div class="w-full">
           <h1 class="section-header mb-16">CLIENT REVIEWS</h1>
@@ -288,6 +289,68 @@
                 trading site’s backend within 7 days.”
               </p>
               <h3>March 2019 · MC Plugin</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div>
+        <div class="w-full pr-96 relative">
+          <img
+            src="images/decoration/botcard.svg"
+            alt=""
+            class="decoration right-0"
+            data-aos="fade-left"
+          />
+          <h1 class="section-header mb-10">DISCORD BOTS</h1>
+          <p class="text-text-onbg text-xl">
+            I create feature rich, easy to use and budget friendly discord bots
+            of any kind. I wil integrate them with apis, add data storage and
+            anything you might want. What makes my discord bots stand out is the
+            ability for the client to edit the configuration directly in the web
+            browser instead of having to fiddle around with annoying JSON and
+            YAML files.
+          </p>
+          <div class="row mb-8 mt-12" data-aos="fade-up">
+            <div class="discord-bot-feature">
+              <h1>PROFESSIONAL AND CLEAN CODE</h1>
+              <div>
+                <p>
+                  I always use best practices and bleeding edge technologies to
+                  make sure your bot is the best version of itself.
+                </p>
+              </div>
+            </div>
+            <div class="discord-bot-feature">
+              <h1>NO FIDDLING WITH CONFIG FILES</h1>
+              <div>
+                <p>
+                  My bots ship with a web browser based config editor.
+                  Customizing the bots is as easy as clicking a link. The
+                  updates will be mirrored instantly.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="row" data-aos="fade-up">
+            <div class="discord-bot-feature">
+              <h1>INTEGRATIONS WITH ALMOST ANYTHING</h1>
+              <div>
+                <p>
+                  I can integrate any APIs you want. For example I can create
+                  stock bots, pokemon bots, csgo bots and weather bots.
+                </p>
+              </div>
+            </div>
+            <div class="discord-bot-feature">
+              <h1>LATEST DISCORD FEATURES</h1>
+              <div>
+                <p>
+                  Did you know discord bots can send dropdowns? My bots can use
+                  buttons, embeds, dropdowns and more. Message me to see what’s
+                  possible!
+                </p>
+              </div>
             </div>
           </div>
         </div>
