--- a/index.html
+++ b/index.html
@@ -192,50 +192,58 @@
         <div class="flex-0">
           <h1 class="section-header mb-16">CONTACT ME</h1>
           <div>
-            <div class="socials" data-aos="fade-left">
-              <div class="socials-image-body">
-                <div class="socials-image">
-                  <img src="images/socials/discord.svg" alt="" />
+            <a href="https://discord.gg/UhhFjzTb39">
+              <div class="socials" data-aos="fade-left">
+                <div class="socials-image-body">
+                  <div class="socials-image">
+                    <img src="images/socials/discord.svg" alt="" />
+                  </div>
+                </div>
+                <div class="socials-body">
+                  <span class="z-10">DISCORD</span>
+                  <span class="hover-mask"></span>
                 </div>
               </div>
-              <div class="socials-body">
-                <span class="z-10">DISCORD</span>
-                <span class="hover-mask"></span>
-              </div>
-            </div>
-            <div class="socials" data-aos="fade-left">
-              <div class="socials-image-body">
-                <div class="socials-image">
-                  <img src="images/socials/steam.svg" alt="" />
+            </a>
+            <a href="https://steamcommunity.com/id/p3ntest/">
+              <div class="socials" data-aos="fade-left">
+                <div class="socials-image-body">
+                  <div class="socials-image">
+                    <img src="images/socials/steam.svg" alt="" />
+                  </div>
+                </div>
+                <div class="socials-body">
+                  <span class="z-10">STEAM</span>
+                  <span class="hover-mask"></span>
                 </div>
               </div>
-              <div class="socials-body">
-                <span class="z-10">STEAM</span>
-                <span class="hover-mask"></span>
-              </div>
-            </div>
-            <div class="socials" data-aos="fade-left">
-              <div class="socials-image-body">
-                <div class="socials-image">
-                  <img src="images/socials/github.svg" alt="" />
+            </a>
+            <a href="https://github.com/p3ntest">
+              <div class="socials" data-aos="fade-left">
+                <div class="socials-image-body">
+                  <div class="socials-image">
+                    <img src="images/socials/github.svg" alt="" />
+                  </div>
+                </div>
+                <div class="socials-body">
+                  <span class="z-10">GITHUB</span>
+                  <span class="hover-mask"></span>
                 </div>
               </div>
-              <div class="socials-body">
-                <span class="z-10">GITHUB</span>
-                <span class="hover-mask"></span>
-              </div>
-            </div>
-            <div class="socials" data-aos="fade-left">
-              <div class="socials-image-body">
-                <div class="socials-image">
-                  <img src="images/socials/twitter.svg" alt="" />
+            </a>
+            <a href="https://twitter.com/JuliusVoorden">
+              <div class="socials" data-aos="fade-left">
+                <div class="socials-image-body">
+                  <div class="socials-image">
+                    <img src="images/socials/twitter.svg" alt="" />
+                  </div>
+                </div>
+                <div class="socials-body">
+                  <span class="z-10">TWITTER</span>
+                  <span class="hover-mask"></span>
                 </div>
               </div>
-              <div class="socials-body">
-                <span class="z-10">TWITTER</span>
-                <span class="hover-mask"></span>
-              </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
