--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="node_modules/aos/dist/aos.css" />
-    <script src="node_modules/aos/dist/aos.js"></script>
+    <link rel="stylesheet" href="./node_modules/aos/dist/aos.css" />
+    <script src="./node_modules/aos/dist/aos.js"></script>
 
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/style.css" />
