--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
 
     <link rel="stylesheet" href="./node_modules/aos/dist/aos.css" />
-    <script src="./node_modules/aos/dist/aos.js"></script>
+    <script src="lib/aos.js"></script>
 
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/style.css" />
@@ -21,7 +21,7 @@
     <script src="lib/smoothscroll.js"></script>
   </head>
   <body class="h-full">
-    <div class="overflow-hidden relative" id="start">
+    <div class="overflow-hidden" id="start">
       <div
         style="
           background-image: url('images/decoration/p3ntest.svg');
