--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="lib/smoothscroll.js"></script>
   </head>
   <body class="h-full">
-    <div class="overflow-hidden" id="start">
+    <div class="overflow-hidden relative" id="start">
       <div
         style="
           background-image: url('images/decoration/p3ntest.svg');
