--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <span class="hover-mask mix-blend-multiply"></span>
               </div>
               <p class="p-10">
-                Discord Bots for NFT and Crypot Trading Community | Tracker,
+                Discord Bots for NFT and Crypto Trading Community | Tracker,
                 Leaderboards, Price Watcher
               </p>
               <p class="card-footer">HTML · CSS · JS</p>
@@ -323,8 +323,8 @@
               <div class="review md:mr-4" data-aos="fade-up">
                 <h1>TEEMOKINGDOM</h1>
                 <p>
-                  “The developer always responded almost instantly and keeped
-                  tweeking my site until I was happy with it. On the day before
+                  “The developer always responded almost instantly and kept
+                  tweaking my site until I was happy with it. On the day before
                   the release he stayed up extra late just to finish even though
                   it was not his fault the site wasn’t finished. I can function
                   well in teams. He also had no problem working for a cheating
