--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/scrollbar.css" />
     <title>P3ntest</title>
 
     <script src="lib/smoothscroll.js"></script>
