--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
       rel="stylesheet"
     />
 
+    <meta property="og:title" content="P3ntest Development" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://p3ntest.dev/" />
+    <meta property="og:image" content="https://p3ntest.dev/images/banner.png" />
+    <meta
+      property="og:description"
+      content="Professional budget-friendly commissions for Websites, Discord Bots, Minecraft and many others!"
+    />
+    <meta name="theme-color" content="#f94655" />
+    <meta name="twitter:card" content="summary_large_image" />
+
     <link rel="stylesheet" href="./node_modules/aos/dist/aos.css" />
     <script src="lib/aos.js"></script>
 
