fix review typo

--- a/index.html
+++ b/index.html
@@ -340,12 +340,12 @@
                   “The developer always responded almost instantly and kept
                   tweaking my site until I was happy with it. On the day before
                   the release he stayed up extra late just to finish even though
-                  it was not his fault the site wasn’t finished. I can function
+                  it was not his fault the site wasn’t finished. He can function
                   well in teams. He also had no problem working for a cheating
                   company even though he does not agree with the concept at
                   all.”
                 </p>
-                <h3>June 2020 · Discord Bot</h3>
+                <h3>November 2021 · Web Design</h3>
               </div>
               <div class="review md:ml-4" data-aos="fade-up">
                 <h1>TEFER</h1>
